--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "@vue/eslint-config-typescript": "^9.1.0",
+    "babel-plugin-import": "^1.13.5",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
     "sass": "^1.32.7",
     "sass-loader": "^12.0.0",
+    "ts-import-plugin": "^2.0.0",
     "typescript": "~4.5.5"
   }
 }
