--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
     "sass": "^1.32.7",
+    "node-sass": "^5.0.0",
     "sass-loader": "^12.0.0",
     "ts-import-plugin": "^2.0.0",
     "typescript": "~4.5.5"
