--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "lodash": "^4.17.21",
     "vant": "^3.4.9",
     "vue": "^3.2.13",
     "vue-class-component": "^8.0.0-0",
@@ -28,8 +29,8 @@
     "babel-plugin-import": "^1.13.5",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
-    "sass": "^1.32.7",
     "node-sass": "^5.0.0",
+    "sass": "^1.32.7",
     "sass-loader": "^12.0.0",
     "ts-import-plugin": "^2.0.0",
     "typescript": "~4.5.5"
